# CheXseg

./: LICENSE  README.md  pyproject.toml  requirements.txt
chexpert-model/: .gitignore  TODO.md  count_pos_valid_labels.py  create_100_per_train_set.py  create_semi_supervised_train_set.py  create_train_set_subsets.py  create_valid_set_subset.py  segmentation_distillation.py  segmentation_test.py  segmentation_test_save_output.py  segmentation_train.py  segmentation_visualize_preds.py  select_ensemble.py  test.py  train.py  train_set_create_script.py
chexpert-model/IRNet/: augmentations.py  cam_to_ir_label.py  cam_to_ir_label_hdf5.py  combine_hdf5_files.py  convert_to_hdf5.py  make_pseudo_seg_labels.py  test_cams_seg_labels.py  test_resizable.py  train_irnet.py
chexpert-model/args/: __init__.py  base_arg_parser.py  seg_base_arg_parser.py  seg_dist_arg_parser.py  seg_test_arg_parser.py  seg_train_arg_parser.py  test_arg_parser.py  train_arg_parser.py  train_arg_parser_irnet.py
chexpert-model/bash_scripts/: train_3class.sh  train_ignore.sh  train_ones.sh  train_zeros.sh
chexpert-model/cams/: gradcam.py  gradcam_nt.py  integrated_gradients.py
chexpert-model/constants/: constants.py
chexpert-model/data/: __init__.py  chexpert_dataset.py  chexpert_dataset_irnet.py  custom_dataset.py  distillation_dataset.py  distillation_loader.py  loader.py  segmentation_dataset.py  segmentation_loader.py
chexpert-model/eval/: evaluator.py  loss.py
chexpert-model/localization_eval/: clean_annotations.py  eval.py  eval_constants.py  eval_helper.py  gt_segmentation.py  (+3 more)
(+14 files in other folders)
